testsuite/tests/iterators/invalid_iterator/bare_node_to_iterator.lkt
from lexer_example import foo_lexer

grammar foo_grammar {
    @main_rule main_rule <- Example("example")

}

class FooNode implements Node[FooNode] {
}

class Example : FooNode {

    @exported fun values_iterator(): Iterator[Example] = [node].to_iterator()
}
